<resources>

    <string name="app_name">Discount Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="listedprice">Listed Price</string>
    <string name="DiscountAmount">Discount %:</string>
    <string name="TwentyFive">25%</string>
    <string name="Fifty">50%</string>
    <string name="Ten">10%</string>
    <string name="customText">Custom</string>
    <string name="customValue">25%</string>
    <string name="youSaved">You Saved</string>
    <string name="youPay">You Pay</string>
    <string name="dynPay">$0.00</string>
    <string name="dynSaved">$0.00</string>
    <string name="exit">Exit</string>
    <string name="editTextHint">Enter Listed Price</string>
</resources>